<resources>
    <string name="app_name">Configurator</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_configuration">Конфигурация</string>
    <string name="title_console">Консоль</string>
    <string name="menu_set">Установить</string>
    <string name="menu_load">Считать</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_open">Открыть</string>
    <string name="bluetooth">Начало</string>
    <string name="switch_bt">Bluetooth</string>
    <string name="btn_send_command">Отправить</string>
    <string name="tv_command_line">Информация из устройства</string>
    <string name="id">ID терминала</string>
    <string name="sw_bluetooth">Выключено</string>
    <string name="restart">Рестарт</string>
    <string name="default_settings">Заводские настройки</string>
    <string name="firmware_version">Версия ПО терминала</string>
    <string name="config_probleskator">Настройка проблескатора</string>
    <string name="tv_config_buoy">Буй</string>
    <string name="tv_diod_light_mode">Режим свечения светодиода</string>
    <string name="tv_luminescence">Яркость свечения</string>
    <string name="tv_illumination_level">Пороговый уровень освещенности</string>
    <string name="tv_longitude">Долгота</string>
    <string name="tv_current_coordinates">Текущие координаты терминала</string>
    <string name="tv_latitude">Широта</string>
    <string name="btn_request_coordinates">Запросить координаты</string>
    <string name="buoy_address">38:1C:4A:2C:C8:09</string>
    <string name="auto_scroll">Автоматическая прокрутка</string>
    <string-array name="blinker_brightness_list">
        <item>Не выбрано</item>
        <item>50%</item>
        <item>100%</item>
    </string-array>
    <string-array name="priority_chnl_list">
        <item>Не выбрано</item>
        <item>SMS</item>
        <item>GPRS</item>
    </string-array>
    <string-array name="bluetooth_devices_types">
        <item>Подключенные</item>
        <item>Доступные</item>
    </string-array>
    <string-array name="satellite_system_list">
        <item>Не выбрано</item>
        <item>ГЛОНАСС и GPS</item>
        <item>GPS</item>
        <item>ГЛОНАСС</item>
    </string-array>
    <string-array name="blinker_mode_list">
        <item>Не выбрано</item>
        <item>Однопроблесковый</item>
        <item>Двухпроблесковый</item>
        <item>Частопроблесковый</item>
        <item>Группочастопроблесковый</item>
        <item>Пульсирующий</item>
        <item>Прерывистый пульсирующий</item>
        <item>Затмевающийся</item>
        <item>Постоянный</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="device_name">Device name</string>
    <string name="device_address">Device address</string>
    <string name="tab">Tab</string>
    <string name="paired_devices">Подключенные</string>
    <string name="available_devices">Доступные</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_button">test button</string>
    <string name="porogi_trevog">Пороги тревог</string>
    <string name="dopustimiy_radius_snosa">Допустимый радиус сноса</string>
    <string name="porogoviy_uroven_krena">Пороговый уровень крена</string>
    <string name="porogoviy_uroven_zaryada_batarei">Пороговый уровень заряда батареи</string>
    <string name="porogoviy_uroven_udara">Пороговый уровень удара</string>
    <string name="period_prosypaniya">Период просыпания для определения координат</string>
    <string name="base_pos">Базовые координаты терминала</string>
    <string name="Set">Установить</string>
    <string name="set_base_pos">Установить текущие координаты</string>
    <string name="max_active">Максимальное время активности системы</string>
    <string name="upower">Текущее напряжение питания системы</string>
    <string name="request_base_pos">Запросить координаты</string>
    <string name="long_and_lat_deviation">Текущая точность определения местоположения</string>
    <string name="by_long">По долготе</string>
    <string name="by_lat">По широте</string>
    <string name="filters">Фильтры</string>
    <string name="hdop">HDOP</string>
    <string name="fix_delay">Задержка первого решения, [c]</string>
    <string name="rcv_coldstart">Холодный старт приёмника</string>
    <string name="satellite_system">Выбор спутниковой группировки</string>
    <string name="alarm_events">Иммитация событий (ALARM EVENTS)</string>
    <string name="event_1">СНО вышел за допустимый радиус сноса</string>
    <string name="event_2">Зафиксирован удар</string>
    <string name="event_3">Крен превысил заданную границу</string>
    <string name="event_4">Заряд батареи меньше заданной границы</string>
    <string name="event_5">Невозможно получить координаты</string>
    <string name="event_6">Были проблемы со связью</string>
    <string name="event_7">Неисправно световое оборудование</string>
    <string name="event_8">Фонарь включен</string>
    <string name="create_test_message">Отправить тестовое сообщение</string>
    <string name="events_mask">События, передаваемые на сервер (EVENTS MASK)</string>
    <string name="subtitle_server">Сервер</string>
    <string name="ip">IP адрес : Порт</string>
    <string name="connect_attempts">Количество неудачных подключений к серверу</string>
    <string name="session_time">Минимальное время соединения с сервером, [c]</string>
    <string name="packet_tout">Время ожидания подтверждения доставки пакета от сервера, [c]</string>
    <string name="subtitle_intervals">Интервалы отправки пакетов (сообщений) на сервер</string>
    <string name="priority_chnl">Канал передачи данных по умолчанию</string>
    <string name="normal_int">В штатном режиме, [с]</string>
    <string name="alarm_int">В аварийном режиме, [с]</string>
    <string name="phones">Телефонные номера</string>
    <string name="sms_center">Номер SMS центра оператора</string>
    <string name="cmd_number">Управляющий номер</string>
    <string name="answ_number">Номер получателя навигационной информации</string>
    <string name="subtitle_archive">Архив</string>
    <string name="number_of_packets">Количество пакетов</string>
    <string name="percents_of_archive">Заполняемость архива, [%]</string>
    <string name="clear_archive">Очистить архив</string>
    <string name="close_connect">Разорвать соединение с сервером</string>
    <string name="sim_config">Настройка симкарты</string>
    <string name="apn">APN</string>
    <string name="by_default">По умолчанию</string>
    <string name="clear">Очистить</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="pin">Пинкод</string>
    <string name="pin_big">PIN</string>
    <string name="enter">Ввести</string>
    <string name="close_pin_request">Отключить запрос</string>
    <string name="sim_attempts">Количество попыток опознания SIM карты</string>
    <string name="deliv_timeout">Время ожидания получения уведломления о доставке, [c]</string>
    <string name="off">Выключено</string>
    <string name="status">Status</string>
    <string name="display_real_point">Отображать реальную точку</string>
    <string name="show_on_map">Отобразить на карте</string>
    <string name="file_name">Имя файла</string>
    <string name="saving_configuration">Сохранение конфигурации</string>
    <string name="save_button">Сохранить</string>
    <string name="cancel_button">Отмена</string>
    <string name="update_list_of_available_devices">Обновить</string>
    <string name="pb_loading">Загрузка</string>
    <string name="error">Произошла ошибка!</string>
    <string name="bluetooth_turning_on_waiting">Включение Bluetooth…\nПодождите…</string>
    <string name="close_bt_connection">Разорвать соединение с устройством </string>
    <string name="disconnect">Отключить</string>
    <string name="ok_button">Ок</string>
    <string name="save_log">Сохранить лог</string>
    <string name="saving_log">Сохрание лога</string>
    <string name="alarm_event_dialog_title">Отправка тестового сообщения</string>
    <string name="alarm_event_dialog_message">Выберите события</string>
    <string name="send_btn">Отправить</string>

</resources>
