<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <CheckBox
        android:id="@+id/cb_1"
        style="@style/cb_list_item"
        android:text="@string/event_1" />

    <CheckBox
        android:id="@+id/cb_2"
        style="@style/cb_list_item"
        android:text="@string/event_2" />


    <CheckBox
        android:id="@+id/cb_3"
        style="@style/cb_list_item"
        android:text="@string/event_3" />

    <CheckBox
        android:id="@+id/cb_4"
        style="@style/cb_list_item"
        android:text="@string/event_4" />

    <CheckBox
        android:id="@+id/cb_5"
        style="@style/cb_list_item"
        android:text="@string/event_5" />

    <CheckBox
        android:id="@+id/cb_6"
        style="@style/cb_list_item"
        android:text="@string/event_6" />

    <CheckBox
        android:id="@+id/cb_7"
        style="@style/cb_list_item"
        android:text="@string/event_7" />

    <CheckBox
        android:id="@+id/cb_8"
        style="@style/cb_list_item"
        android:text="@string/event_8" />

</LinearLayout>