<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group
        android:id="@+id/group_update_available_devices"
        android:visible="false"
        app:showAsAction="ifRoom">
        <item
            android:id="@+id/item_update_available_devices"
            android:icon="@drawable/refresh"
            android:title="@string/update_list_of_available_devices"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group_configuration_actions_menu"
        app:showAsAction="ifRoom">
        <item
            android:id="@+id/item_set"
            android:title="@string/menu_set" />

        <item
            android:id="@+id/item_load"
            android:title="@string/menu_load" />

        <item
            android:id="@+id/item_save"
            android:title="@string/menu_save" />

        <item
            android:id="@+id/item_open"
            android:title="@string/menu_open" />
    </group>

</menu>
