<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_config_navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_current_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/tv_current_coordinates"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_longitude"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tv_latitude"
                    android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_request_coordinates"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/btn_request_coordinates"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>